log/2021-05-07T23:49:30+0800.log
Autotest: Begin at 2021年 05月 07日 星期五 23:49:30 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp: In function 'void pageReplace(long int*, long int)':
pageReplace.cpp:29:13: error: 'phsic_memory' was not declared in this scope
         map[phsic_memory[point]] = 0;
             ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 07日 星期五 23:49:33 CST ][0m
